# rust-api-rest

./: .env copy  Cargo.toml  README.md
src/: main.rs
src/controllers/: user_controller.rs
src/database/: connection.rs
src/models/: user.rs
src/services/: user_service.rs
